add ReceivedDialog, implemented TaskManager, tests for TaskManager, Settings